Add javac facade and JDK resolution